# AgriNet-Research

./: .gitignore  README.md  conda-win.yml  pyproject.toml
agrinet/best_models/: .gitignore
agrinet/datasets/Agriculture-Vision-2021/: .gitignore  _mini_dataset_processed_masks.csv  agriculture-vision-2021_dataset_processed_masks.csv  agriculture-vision-2021_mini_dataset_processed_masks.csv  create_mini_dataset.py  dataset_parser.ipynb  eda_and_normalization.ipynb  logs_to_graph.py  notebook.ipynb  training_logs.txt  training_results_efficientnetB3.ipynb  training_results_mobilenetV2.ipynb  work_with_dataset_and_train_model.ipynb
agrinet/datasets/DJI_202507131523_004/: .gitignore  pre-processing-REQUIRED.txt
agrinet/training_results/: results.ipynb  training_results_efficientnetB2.ipynb  training_results_efficientnetB5.ipynb
